Fix ThreeModal positioning on mobile

--- a/src/scss/three-modal.scss
+++ b/src/scss/three-modal.scss
@@ -137,11 +137,13 @@
 
   // inverted base styles
   .modal-body.inverted {
-    position: relative;
-    right: 300px;
-    transform-origin: 100% 0%;
-    transform: scaleX(0);
-    transition: transform 250ms 500ms;
+    @media screen and (min-width: 768px) {
+      position: relative;
+      right: 300px;
+      transform-origin: 100% 0%;
+      transform: scaleX(0);
+      transition: transform 250ms 500ms;
+    }
   }
 }
 video {
